Apply OpenRewrite and Spotless to all modules
Automated transformations: var inference, String.formatted(),
final on parameters/variables/fields, braces on control flow,
instanceof pattern matching, and Eclipse formatter cleanup.