@@ -18,7 +18,7 @@ public final class CPLC {
     private final LinkedHashMap<Field, byte[]> values = new LinkedHashMap<>();
 
     private CPLC(byte[] data) {
-        int offset = 0;
+        var offset = 0;
         for (Field f : Field.values()) {
             values.put(f, Arrays.copyOfRange(data, offset, offset + f.len));
             offset += f.len;
@@ -26,17 +26,20 @@ public final class CPLC {
     }
 
     public static CPLC fromBytes(byte[] data) throws GPDataException {
-        if (data == null)
+        if (data == null) {
             throw new IllegalArgumentException("data is null");
-        if (data.length < 0x2A)
-            throw new GPDataException(String.format("Input can't be valid CPLC if length is only %02X!", data.length), data);
+        }
+        if (data.length < 0x2A) {
+            throw new GPDataException("Input can't be valid CPLC if length is only %02X!".formatted(data.length), data);
+        }
         // Remove tag, if present
-        if (data[0] == (byte) 0x9f && data[1] == (byte) 0x7f && data[2] == (byte) 0x2A)
+        if (data[0] == (byte) 0x9f && data[1] == (byte) 0x7f && data[2] == (byte) 0x2A) {
             data = Arrays.copyOfRange(data, 3, data.length);
+        }
         return new CPLC(data);
     }
 
-    public byte[] get(Field f) {
+    public byte[] get(final Field f) {
         return values.get(f);
     }
 
@@ -46,7 +49,9 @@ public final class CPLC {
     }
 
     public String toPrettyString() {
-        return Arrays.stream(Field.values()).map(i -> i.toString() + "=" + HexUtils.bin2hex(values.get(i)) + (i.toString().endsWith("Date") ? " (" + toDateFailsafe(values.get(i)) + ")" : "")).collect(Collectors.joining("\n      ", "CPLC: ", "\n"));
+        return Arrays.stream(Field.values()).map(
+                i -> i.toString() + "=" + HexUtils.bin2hex(values.get(i)) + (i.toString().endsWith("Date") ? " (" + toDateFailsafe(values.get(i)) + ")" : ""))
+                .collect(Collectors.joining("\n      ", "CPLC: ", "\n"));
     }
 
     public enum Field {
@@ -71,24 +76,25 @@ public final class CPLC {
 
         private final int len;
 
-        Field(int len) {
+        Field(final int len) {
             this.len = len;
         }
     }
 
-    public static Optional<LocalDate> toRelativeDate(byte[] v, LocalDate now) throws GPDataException {
+    public static Optional<LocalDate> toRelativeDate(final byte[] v, final LocalDate now) throws GPDataException {
         if ((v[0] == 0 && v[1] == 0) || (v[0] == (byte) 0xFF && v[1] == (byte) 0xFF)) {
             logger.debug("0x0000/0xFFFF does not represent a valid date");
             return Optional.empty();
         }
-        String sv = HexUtils.bin2hex(v);
+        final var sv = HexUtils.bin2hex(v);
         try {
-            int y = Integer.parseInt(sv.substring(0, 1));
-            int d = Integer.parseInt(sv.substring(1, 4));
-            int base = 2020;
-            if (y >= now.getYear() % 10 && d > now.getDayOfYear())
+            final var y = Integer.parseInt(sv.substring(0, 1));
+            final var d = Integer.parseInt(sv.substring(1, 4));
+            var base = 2020;
+            if (y >= now.getYear() % 10 && d > now.getDayOfYear()) {
                 base = 2010;
-            LocalDate ld = LocalDate.ofYearDay(base + y, d);
+            }
+            final LocalDate ld = LocalDate.ofYearDay(base + y, d);
             return Optional.of(ld);
         } catch (NumberFormatException | DateTimeException e) {
             logger.warn("Invalid CPLC date: " + sv);
@@ -96,7 +102,7 @@ public final class CPLC {
         }
     }
 
-    public static String toDateFailsafe(byte[] v) {
+    public static String toDateFailsafe(final byte[] v) {
         return toRelativeDate(v, LocalDate.now(ZoneOffset.UTC)).map(e -> e.format(DateTimeFormatter.ISO_LOCAL_DATE)).orElse("invalid date format");
     }
 
@@ -104,7 +110,7 @@ public final class CPLC {
         return dateToBytes(LocalDate.now(ZoneOffset.UTC));
     }
 
-    public static byte[] dateToBytes(LocalDate d) {
-        return HexUtils.hex2bin(String.format("%d%03d", d.getYear() - 2020, d.getDayOfYear()));
+    public static byte[] dateToBytes(final LocalDate d) {
+        return HexUtils.hex2bin("%d%03d".formatted(d.getYear() - 2020, d.getDayOfYear()));
     }
 }
