@@ -43,8 +43,7 @@ import static pro.javacard.gp.data.BitField.byte_mask;
 public final class GPData {
     private static final Logger logger = LoggerFactory.getLogger(GPData.class);
 
-    private GPData() {
-    }
+    private GPData() {}
 
     // Default ISD AID-s
     static final byte[] defaultISDBytes = HexUtils.hex2bin("A000000151000000");
@@ -82,29 +81,29 @@ public final class GPData {
     // GP 2.1.1: F.2 Table F-1
     // Tag 66 with nested 73
     public static void pretty_print_card_data(byte[] data) {
-        var tlvs = TLV.parse(data);
+        final var tlvs = TLV.parse(data);
         GPUtils.trace_tlv(data, logger);
 
-        var cd = TLV.find(tlvs, Tag.ber(0x66));
+        final var cd = TLV.find(tlvs, Tag.ber(0x66));
         if (cd.isPresent() && cd.get().hasChildren()) {
-            var isdd = TLV.find(tlvs, Tag.ber(0x73));
+            final var isdd = TLV.find(tlvs, Tag.ber(0x73));
             if (isdd.isPresent()) {
                 // Loop all sub-values
                 for (TLV vt : isdd.get().children()) {
                     if (vt.tag().equals(Tag.ber(0x06))) {
-                        String oid = logAndGetOidFromByteArray(vt.tag().bytes(), vt.value());
-                        if (oid.equals("1.2.840.114283.1")) {
+                        final String oid = logAndGetOidFromByteArray(vt.tag().bytes(), vt.value());
+                        if ("1.2.840.114283.1".equals(oid)) {
                             System.out.println("-> Global Platform card");
                         }
                     } else if (vt.tag().equals(Tag.ber(0x60))) {
-                        String oid = logAndGetOidFromByteArray(vt.tag().bytes(),
+                        final String oid = logAndGetOidFromByteArray(vt.tag().bytes(),
                                 vt.children().get(0).value()); // 6X are constructed tags
                         if (oid.startsWith("1.2.840.114283.2")) {
-                            String[] p = oid.substring("1.2.840.114283.2.".length()).split("\\.");
+                            final var p = oid.substring("1.2.840.114283.2.".length()).split("\\.");
                             System.out.println("-> GP Version: " + String.join(".", p));
                         }
                     } else if (vt.tag().equals(Tag.ber(0x63))) {
-                        String oid = logAndGetOidFromByteArray(vt.tag().bytes(),
+                        final String oid = logAndGetOidFromByteArray(vt.tag().bytes(),
                                 vt.children().get(0).value()); // 6X are constructed tags
                         if (oid.startsWith("1.2.840.114283.3")) {
                             System.out.println(
@@ -113,11 +112,11 @@ public final class GPData {
                     } else if (vt.tag().equals(Tag.ber(0x64))) {
                         // Format 1 and Format 2 support
                         for (TLV ot : vt.children()) {
-                            byte[] oidBytes = ot.value();
-                            String oid = logAndGetOidFromByteArray(ot.tag().bytes(), oidBytes);
+                            final var oidBytes = ot.value();
+                            final String oid = logAndGetOidFromByteArray(ot.tag().bytes(), oidBytes);
                             // This also works with the invalid encoding for SCP80 i=00
                             if (oid.startsWith("1.2.840.114283.4.")) {
-                                byte[] scp = Arrays.copyOfRange(oidBytes, oidBytes.length - 2, oidBytes.length);
+                                final byte[] scp = Arrays.copyOfRange(oidBytes, oidBytes.length - 2, oidBytes.length);
                                 System.out.printf("-> GP %s%n",
                                         GPSecureChannelVersion.valueOf(scp[0] & 0xFF, scp[1] & 0xFF));
                             }
@@ -125,10 +124,10 @@ public final class GPData {
                     } else if (vt.tag().equals(Tag.ber(0x65))) {
                         // TODO: No format defined yet?
                     } else if (vt.tag().equals(Tag.ber(0x66))) {
-                        String oid = logAndGetOidFromByteArray(vt.tag().bytes(),
+                        final String oid = logAndGetOidFromByteArray(vt.tag().bytes(),
                                 vt.children().get(0).value()); // 6X are constructed tags
                         if (oid.startsWith("1.3.6.1.4.1.42.2.110.1")) {
-                            String p = oid.substring("1.3.6.1.4.1.42.2.110.1.".length());
+                            final var p = oid.substring("1.3.6.1.4.1.42.2.110.1.".length());
                             if (p.length() == 1) {
                                 System.out.println("-> JavaCard v" + p);
                             }
@@ -154,23 +153,23 @@ public final class GPData {
         final int value;
         final String algo;
 
-        LFDBH(int byteValue, String algo) {
+        LFDBH(final int byteValue, final String algo) {
             this.value = byteValue;
             this.algo = algo;
         }
 
-        public static Optional<LFDBH> byValue(int byteValue) {
+        public static Optional<LFDBH> byValue(final int byteValue) {
             return Arrays.stream(values()).filter(e -> e.value == byteValue).findFirst();
         }
 
-        public static Optional<LFDBH> fromString(String s) {
+        public static Optional<LFDBH> fromString(final String s) {
             return Arrays.stream(values()).filter(e -> e.name().equalsIgnoreCase(s)).findFirst();
         }
 
-        public static List<LFDBH> fromBytes(byte[] v) {
-            List<LFDBH> r = new ArrayList<>();
-            for (int i = 0; i < v.length; i++) {
-                final int j = i; // TODO: IntStream.range() ?
+        public static List<LFDBH> fromBytes(final byte[] v) {
+            final var r = new ArrayList<LFDBH>();
+            for (var i = 0; i < v.length; i++) {
+                final var j = i; // TODO: IntStream.range() ?
                 r.add(Arrays.stream(values()).filter(e -> e.value == (v[j] & 0xFF)).findFirst()
                         .orElseThrow(() -> new GPDataException("Invalid value", v)));
             }
@@ -202,7 +201,7 @@ public final class GPData {
 
         private final BitField.Def def;
 
-        SIGNATURE(BitField.Def def) {
+        SIGNATURE(final BitField.Def def) {
             this.def = def;
         }
 
@@ -212,10 +211,11 @@ public final class GPData {
         }
     }
 
-    static List<Integer> toUnsignedList(byte[] b) {
-        ArrayList<Integer> r = new ArrayList<>();
-        for (byte value : b)
+    static List<Integer> toUnsignedList(final byte[] b) {
+        final var r = new ArrayList<Integer>();
+        for (byte value : b) {
             r.add(value & 0xFF);
+        }
         return r;
     }
 
@@ -228,26 +228,26 @@ public final class GPData {
         }
         // END BUGFIX
 
-        var tlvs = TLV.parse(data);
+        final var tlvs = TLV.parse(data);
         GPUtils.trace_tlv(data, logger);
-        var capsOpt = TLV.find(tlvs, Tag.ber(0x67));
+        final var capsOpt = TLV.find(tlvs, Tag.ber(0x67));
         if (capsOpt.isPresent()) {
             for (TLV v : capsOpt.get().children()) {
                 var t = v.find(Tag.ber(0xA0));
                 if (t != null) {
-                    var scp = t.find(Tag.ber(0x80));
+                    final var scp = t.find(Tag.ber(0x80));
                     if (scp != null) {
                         System.out.format("Supports SCP%02X", be2int(scp.value()));
-                        var is = t.find(Tag.ber(0x81));
+                        final var is = t.find(Tag.ber(0x81));
                         if (is != null) {
                             for (byte b : is.value()) {
                                 System.out.format(" i=%02X", b);
                             }
                         }
-                        var keylens = t.find(Tag.ber(0x82));
+                        final var keylens = t.find(Tag.ber(0x82));
                         if (keylens != null) {
                             System.out.print(" with");
-                            int keyval = be2int(keylens.value());
+                            final var keyval = be2int(keylens.value());
                             if ((keyval & 0x01) == 0x01) {
                                 System.out.print(" AES-128");
                             }
@@ -264,42 +264,42 @@ public final class GPData {
                 }
                 t = v.find(Tag.ber(0x81));
                 if (t != null) {
-                    Set<GPRegistryEntry.Privilege> privs = BitField.parse(GPRegistryEntry.Privilege.class, t.value());
+                    final var privs = BitField.parse(GPRegistryEntry.Privilege.class, t.value());
                     System.out.println("Supported DOM privileges: "
                             + privs.stream().map(Enum::toString).collect(Collectors.joining(", ")));
                     continue;
                 }
                 t = v.find(Tag.ber(0x82));
                 if (t != null) {
-                    Set<GPRegistryEntry.Privilege> privs = BitField.parse(GPRegistryEntry.Privilege.class, t.value());
+                    final var privs = BitField.parse(GPRegistryEntry.Privilege.class, t.value());
                     System.out.println("Supported APP privileges: "
                             + privs.stream().map(Enum::toString).collect(Collectors.joining(", ")));
                     continue;
                 }
                 t = v.find(Tag.ber(0x83));
                 if (t != null) {
-                    String hashes = toUnsignedList(t.value()).stream().map(e -> LFDBH.byValue(e).get().toString())
+                    final var hashes = toUnsignedList(t.value()).stream().map(e -> LFDBH.byValue(e).get().toString())
                             .collect(Collectors.joining(", "));
                     System.out.println("Supported LFDB hash: " + hashes);
                     continue;
                 }
                 t = v.find(Tag.ber(0x85));
                 if (t != null) {
-                    String ciphers = BitField.parse(SIGNATURE.class, t.value()).stream().map(Enum::toString)
+                    final var ciphers = BitField.parse(SIGNATURE.class, t.value()).stream().map(Enum::toString)
                             .collect(Collectors.joining(", "));
                     System.out.println("Supported Token Verification ciphers: " + ciphers);
                     continue;
                 }
                 t = v.find(Tag.ber(0x86));
                 if (t != null) {
-                    String ciphers = BitField.parse(SIGNATURE.class, t.value()).stream().map(Enum::toString)
+                    final var ciphers = BitField.parse(SIGNATURE.class, t.value()).stream().map(Enum::toString)
                             .collect(Collectors.joining(", "));
                     System.out.println("Supported Receipt Generation ciphers: " + ciphers);
                     continue;
                 }
                 t = v.find(Tag.ber(0x87));
                 if (t != null) {
-                    String ciphers = BitField.parse(SIGNATURE.class, t.value()).stream().map(Enum::toString)
+                    final var ciphers = BitField.parse(SIGNATURE.class, t.value()).stream().map(Enum::toString)
                             .collect(Collectors.joining(", "));
                     System.out.println("Supported DAP Verification ciphers: " + ciphers);
                     continue;
@@ -313,107 +313,111 @@ public final class GPData {
     }
 
     // NB! This assumes a selected (I)SD!
-    public static void dump(APDUBIBO channel) throws IOException, GPException {
-        byte[] cplc = fetchCPLC(channel);
+    public static void dump(final APDUBIBO channel) throws IOException, GPException {
+        final byte[] cplc = fetchCPLC(channel);
         if (cplc != null) {
             System.out.println(CPLC.fromBytes(cplc).toPrettyString());
         }
 
         // IIN
-        byte[] iin = getData(channel, 0x00, 0x42, "IIN", false);
+        final byte[] iin = getData(channel, 0x00, 0x42, "IIN", false);
         if (iin != null) {
             System.out.println("IIN: " + HexUtils.bin2hex(iin));
         }
         // CIN
-        byte[] cin = getData(channel, 0x00, 0x45, "CIN", false);
+        final byte[] cin = getData(channel, 0x00, 0x45, "CIN", false);
         if (cin != null) {
             System.out.println("CIN: " + HexUtils.bin2hex(cin));
         }
 
         // KDD
-        byte[] kdd = getData(channel, 0x00, 0xCF, "KDD", false);
+        final byte[] kdd = getData(channel, 0x00, 0xCF, "KDD", false);
         if (kdd != null) {
             System.out.println("KDD: " + HexUtils.bin2hex(kdd));
         }
         // SSC
-        byte[] ssc = getData(channel, 0x00, 0xC1, "SSC", false);
+        final byte[] ssc = getData(channel, 0x00, 0xC1, "SSC", false);
         if (ssc != null) {
             System.out.println("SSC: " + HexUtils.bin2hex(ssc));
         }
         // Print Card Data
         System.out.println("Card Data: ");
-        byte[] cardData = getData(channel, 0x00, 0x66, "Card Data", false);
+        final byte[] cardData = getData(channel, 0x00, 0x66, "Card Data", false);
         if (cardData != null) {
             pretty_print_card_data(cardData);
         }
         // Print Card Capabilities
         System.out.println("Card Capabilities: ");
-        byte[] cardCapabilities = getData(channel, 0x00, 0x67, "Card Capabilities", false);
+        final byte[] cardCapabilities = getData(channel, 0x00, 0x67, "Card Capabilities", false);
         if (cardCapabilities != null) {
             pretty_print_card_capabilities(cardCapabilities);
         }
 
         // Print Key Info Template
-        byte[] keyInfo = fetchKeyInfoTemplate(channel);
+        final byte[] keyInfo = fetchKeyInfoTemplate(channel);
         if (keyInfo != null) {
             System.out.println(GPKeyInfo.toString(GPKeyInfo.parseTemplate(keyInfo)));
         }
     }
 
     // Just to encapsulate tag constants behind meaningful name
-    public static byte[] fetchCPLC(APDUBIBO channel) {
+    public static byte[] fetchCPLC(final APDUBIBO channel) {
         return getData(channel, 0x9f, 0x7f, "CPLC", true);
     }
 
-    public static byte[] fetchKeyInfoTemplate(APDUBIBO channel) {
+    public static byte[] fetchKeyInfoTemplate(final APDUBIBO channel) {
         return getData(channel, 0x00, 0xE0, "Key Info Template", false);
     }
 
-    public static String sw2str(int sw) {
-        String msg = GPData.sw.get(sw);
-        if (msg == null)
-            return String.format("0x%04X", sw);
-        return String.format("0x%04X (%s)", sw, msg);
+    public static String sw2str(final int sw) {
+        final var msg = GPData.sw.get(sw);
+        if (msg == null) {
+            return "0x%04X".formatted(sw);
+        }
+        return "0x%04X (%s)".formatted(sw, msg);
     }
 
-    public static String oid2string(byte[] oid) {
+    public static String oid2string(final byte[] oid) {
         logger.trace("Parsing {} as OID", HexUtils.bin2hex(oid));
         // See https://github.com/bcgit/bc-java/issues/1758
         // BC 1.78 and 1.79 were affected.
         // 2A864886FC6B048000 would throw exception instead of returning
         // "1.2.840.114283.4.0" without this
         System.setProperty("org.bouncycastle.asn1.allow_wrong_oid_enc", "true");
-        ASN1ObjectIdentifier realoid = ASN1ObjectIdentifier.fromContents(oid);
+        final var realoid = ASN1ObjectIdentifier.fromContents(oid);
         System.clearProperty("org.bouncycastle.asn1.allow_wrong_oid_enc");
-        if (realoid == null)
+        if (realoid == null) {
             throw new IllegalArgumentException("Could not parse OID from " + HexUtils.bin2hex(oid));
+        }
         return realoid.toString();
     }
 
-    private static String logAndGetOidFromByteArray(byte[] tag, byte[] tlv) {
-        String oid = oid2string(tlv);
+    private static String logAndGetOidFromByteArray(final byte[] tag, final byte[] tlv) {
+        final String oid = oid2string(tlv);
         System.out.println("Tag " + new BigInteger(1, tag).toString(16) + ": " + oid);
         return oid;
     }
 
     // Big-endian bytes to int (1-4 bytes)
-    private static int be2int(byte[] b) {
-        int r = 0;
-        for (byte v : b)
+    private static int be2int(final byte[] b) {
+        var r = 0;
+        for (byte v : b) {
             r = (r << 8) | (v & 0xFF);
+        }
         return r;
     }
 
-    public static String oid2version(byte[] bytes) throws GPDataException {
-        String oid = oid2string(bytes);
+    public static String oid2version(final byte[] bytes) throws GPDataException {
+        final String oid = oid2string(bytes);
         return oid.substring("1.2.840.114283.2.".length());
     }
 
-    public static byte[] getData(APDUBIBO channel, int p1, int p2, String name, boolean failsafe) {
+    public static byte[] getData(final APDUBIBO channel, final int p1, final int p2, final String name, final boolean failsafe) {
         logger.trace("GET DATA({})", name);
-        ResponseAPDU resp = channel.transmit(new CommandAPDU(CLA_GP, GPSession.INS_GET_DATA, p1, p2, 256));
-        if (failsafe && resp.getSW() != GPSession.SW_NO_ERROR)
+        var resp = channel.transmit(new CommandAPDU(CLA_GP, GPSession.INS_GET_DATA, p1, p2, 256));
+        if (failsafe && resp.getSW() != GPSession.SW_NO_ERROR) {
             resp = channel.transmit(new CommandAPDU(0x00, GPSession.INS_GET_DATA, p1, p2, 256));
+        }
         if (resp.getSW() == GPSession.SW_NO_ERROR) {
             return resp.getData();
         } else if (resp.getSW() == 0x6A88) {
