@@ -30,7 +30,7 @@ public final class GPSecureChannelVersion {
 
         private final int value;
 
-        SCP(int value) {
+        SCP(final int value) {
             this.value = value;
         }
 
@@ -38,30 +38,32 @@ public final class GPSecureChannelVersion {
             return (byte) (value & 0xFF);
         }
 
-        public static Optional<SCP> valueOf(int i) {
-            for (SCP v : values())
-                if (v.value == i)
+        public static Optional<SCP> valueOf(final int i) {
+            for (SCP v : values()) {
+                if (v.value == i) {
                     return Optional.of(v);
+                }
+            }
             return Optional.empty();
         }
     }
 
-    public GPSecureChannelVersion(SCP scp, int i) {
+    public GPSecureChannelVersion(final SCP scp, final int i) {
         this.scp = scp;
         this.i = i;
     }
 
-    public static GPSecureChannelVersion valueOf(int v) {
+    public static GPSecureChannelVersion valueOf(final int v) {
         return valueOf(v, 0);
     }
 
-    public static GPSecureChannelVersion valueOf(int v, int i) {
-        SCP scp = SCP.valueOf(v).orElseThrow(() -> new IllegalArgumentException("Unknown SCP version: " + v));
+    public static GPSecureChannelVersion valueOf(final int v, final int i) {
+        final var scp = SCP.valueOf(v).orElseThrow(() -> new IllegalArgumentException("Unknown SCP version: " + v));
         return new GPSecureChannelVersion(scp, i);
     }
 
     @Override
     public String toString() {
-        return i == 0 ? scp.name() : String.format("%s (i=%02x)", scp.name(), i);
+        return i == 0 ? scp.name() : "%s (i=%02x)".formatted(scp.name(), i);
     }
 }
