@@ -29,7 +29,7 @@ public class APDUParsers {
 
     static {
         // When using strings, have hex instead of b64
-        SimpleModule hexModule = new SimpleModule();
+        final var hexModule = new SimpleModule();
         hexModule.addSerializer(byte[].class, new BytesAsHexSerializer());
         hexModule.addDeserializer(byte[].class, new BytesAsHexDeserializer());
 
@@ -47,35 +47,34 @@ public class APDUParsers {
         cbor = new CBORMapper();
     }
 
-
-    static public class BytesAsHexDeserializer extends JsonDeserializer<byte[]> {
+    public static class BytesAsHexDeserializer extends JsonDeserializer<byte[]> {
         @Override
-        public byte[] deserialize(JsonParser jsonParser, DeserializationContext deserializationContext) throws IOException, JacksonException {
+        public byte[] deserialize(final JsonParser jsonParser, final DeserializationContext deserializationContext) throws IOException, JacksonException {
             return Hex.decode(jsonParser.getValueAsString());
         }
     }
 
-    static public class BytesAsHexSerializer extends JsonSerializer<byte[]> {
+    public static class BytesAsHexSerializer extends JsonSerializer<byte[]> {
 
         @Override
-        public void serialize(byte[] bytes, JsonGenerator jsonGenerator, SerializerProvider serializerProvider) throws IOException {
+        public void serialize(final byte[] bytes, final JsonGenerator jsonGenerator, final SerializerProvider serializerProvider) throws IOException {
             jsonGenerator.writeString(Hex.toHexString(bytes));
         }
     }
 
-
     // Recursive and makes a copy of the node
-    public static JsonNode hexify(JsonNode node) {
+    public static JsonNode hexify(final JsonNode node) {
         return hexify_(node.deepCopy());
     }
 
-
     public static String pretty(Object o) {
         try {
-            if (o instanceof JsonNode)
-                o = hexify((JsonNode) o);
-            if (o instanceof byte[])
-                o = hexify(cbor.readTree((byte[]) o));
+            if (o instanceof JsonNode node) {
+                o = hexify(node);
+            }
+            if (o instanceof byte[] bytes) {
+                o = hexify(cbor.readTree(bytes));
+            }
             return pretty.writeValueAsString(o);
         } catch (IOException e) {
             throw new RuntimeException(e);
@@ -83,17 +82,17 @@ public class APDUParsers {
     }
 
     // Jackson normally uses base64 for binary. We like hex in visual instead. Can't have a BinaryNode serializer in Jackson, thus do deep copy and hexify
-    static JsonNode hexify_(JsonNode node) {
+    static JsonNode hexify_(final JsonNode node) {
         if (node.isArray()) {
-            ArrayNode hexified = json.createArrayNode();
+            final var hexified = json.createArrayNode();
             node.forEach(e -> hexified.add(hexify_(e)));
             return hexified;
         } else if (node.isObject()) {
-            ObjectNode obj = (ObjectNode) node;
+            final var obj = (ObjectNode) node;
             obj.fieldNames().forEachRemaining(fn -> obj.set(fn, hexify_(obj.get(fn))));
             return obj;
         } else if (node.isBinary()) {
-            byte[] bytes = Base64.decode(node.asText());
+            final byte[] bytes = Base64.decode(node.asText());
             return new TextNode(Hex.toHexString(bytes));
         }
         return node;
@@ -104,25 +103,25 @@ public class APDUParsers {
         return s.replaceAll("(\\s+|0x|0X|:)", "");
     }
 
-    static byte[] validate(byte[] apdu) {
+    static byte[] validate(final byte[] apdu) {
         return new CommandAPDU(apdu).getBytes();
     }
 
-
-    public static String visualize_structure(byte[] b) {
+    public static String visualize_structure(final byte[] b) {
         // Try CBOR
         try {
-            JsonNode json = cbor.readTree(b);
+            final var json = cbor.readTree(b);
             // Only if it's an array or object
-            if (json.isArray() || json.isObject())
+            if (json.isArray() || json.isObject()) {
                 return "# CBOR: " + pretty(json);
+            }
         } catch (IOException e) {
             // Not CBOR
         }
 
         // Try TLV
         try {
-            List<String> tlv = GPUtils.visualize_tlv(b);
+            final var tlv = GPUtils.visualize_tlv(b);
             return String.join("\n", tlv);
         } catch (IllegalArgumentException e) {
             // Do nothing
@@ -137,18 +136,19 @@ public class APDUParsers {
 
         s = s.trim();
 
-        if (s.length() == 0)
+        if (s.length() == 0) {
             throw new IllegalArgumentException("Empty APDU string");
+        }
 
         try {
             // If curly strings, parse as payload and dump into compact CBOR
-            int curly = s.indexOf('{');
+            final var curly = s.indexOf('{');
             if (curly > 0) {
-                byte[] header = Hex.decode(hex_cleanup(s.substring(0, curly)));
+                final byte[] header = Hex.decode(hex_cleanup(s.substring(0, curly)));
                 if (header.length == 4) {
-                    JsonNode j = json.readTree(s.substring(curly));
-                    byte[] c = cbor.writeValueAsBytes(j);
-                    return validate(GPUtils.concatenate(header, new byte[]{(byte) (c.length & 0xFF)}, c));
+                    final var j = json.readTree(s.substring(curly));
+                    final var c = cbor.writeValueAsBytes(j);
+                    return validate(GPUtils.concatenate(header, new byte[] { (byte) (c.length & 0xFF) }, c));
                 }
             } else {
                 // If it works as valid APDU - great.
@@ -156,21 +156,22 @@ public class APDUParsers {
                     return validate(Hex.decode(hex_cleanup(s)));
                 } catch (IllegalArgumentException | DecoderException e) {
                     // Otherwise support giving header and payload separated by space and fill payload length in automagically
-                    @SuppressWarnings("StringSplitter") // Trailing empty strings are not relevant here
-                    String[] pieces = s.split("\\s+");
+                    @SuppressWarnings("StringSplitter")
+                    final // Trailing empty strings are not relevant here
+                    var pieces = s.split("\\s+");
                     if (pieces.length == 2) {
-                        byte[][] pcs = new byte[2][];
+                        final byte[][] pcs = new byte[2][];
                         pcs[0] = Hex.decode(hex_cleanup(pieces[0]));
                         pcs[1] = Hex.decode(hex_cleanup(pieces[1]));
                         if (pcs[0].length == 4) {
-                            return validate(GPUtils.concatenate(pcs[0], new byte[]{(byte) (pcs[1].length & 0xFF)}, pcs[1]));
+                            return validate(GPUtils.concatenate(pcs[0], new byte[] { (byte) (pcs[1].length & 0xFF) }, pcs[1]));
                         }
                     }
                 }
             }
         } catch (IOException e) {
-            throw new IllegalArgumentException(String.format("Could not parse \"%s\": %s", s, e.getMessage()), e);
+            throw new IllegalArgumentException("Could not parse \"%s\": %s".formatted(s, e.getMessage()), e);
         }
-        throw new IllegalArgumentException(String.format("Don't know how to handle \"%s\"", s));
+        throw new IllegalArgumentException("Don't know how to handle \"%s\"".formatted(s));
     }
 }
